Working Workout DELETE method
